<resources>
    <string name="app_name">KonverterValut</string>
    <string name="oglav">Конверетер валют</string>
    <string name="podskaz">Введите число</string>
    <string name="title_activity_wibor_valut">wiborValut</string>
    <string name="rub">Рубль</string>
    <string name="usd">Доллор</string>
    <string name="eur">Евро</string>
    <string name="jpy">Японская иена</string>
    <string name="gbp">Фунт стерлингов</string>
    <string name="byn">Белорусский рубль</string>
    <string name="cny">Китайский юань</string>



</resources>